--- a/quantum-composer/html/styles.css
+++ b/quantum-composer/html/styles.css
@@ -153,6 +153,8 @@ body {
     height: 200px;
     margin-top: 10px;
     border: 1px solid #373737;
+    display: flex;
+    flex-direction: column;
 }
 #circuit-area-chart-close-btn {
     position: absolute;
@@ -198,4 +200,9 @@ body {
 #dragCanvas {
     position: absolute;
     z-index: 9;
+}
+#stateBarChartWrapper {
+    overflow-x: scroll;
+    overflow-y: scroll;
+    flex: 1;
 }
