--- a/quantum-composer/html/styles.css
+++ b/quantum-composer/html/styles.css
@@ -182,6 +182,14 @@ body {
     height: 44px;
 }
 
+#stateBarChartFilterZero {
+    position: absolute;
+    top: 0px;
+    right: 44px;
+    height: 44px;
+    width: 105px;
+}
+
 .content .code-area {
     position: relative;
     width: 300px;
@@ -269,5 +277,15 @@ body {
 }
 .gate-menu-popup-btn {
     width: 44px;
+    height: 44px;
+}
+#paste-menu-popup {
+    position: absolute;
+    width: 88px;
+    height: 44px;
+    display: none;
+}
+#paste-menu-popup-btn {
+    width: 88px;
     height: 44px;
 }
