--- a/dolphinscheduler-ui/public/styles.css
+++ b/dolphinscheduler-ui/public/styles.css
@@ -465,8 +465,6 @@ body {
     flex: 1;
     margin-top: 10px;
     border: 1px solid #EDECF3;
-    overflow-x: scroll;
-    overflow-y: scroll;
     width: 100%;
 }
 
@@ -474,13 +472,16 @@ body {
     max-width: 100%;
 }
 
-#canvasSimWrapper {
-    max-width: 50%;
+#canvasSimWrapper,
+#simulateOutput {
+    width: 50%;
     overflow: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    border: 1px solid #DDDDDD;
+    max-height: 100vh;
 }
 
 #paste-menu-popup {
@@ -509,38 +510,30 @@ body {
     cursor: pointer;
 }
 
-#simulateOutput {
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex: 1;
-}
-
 #simulateOutput ul {
     list-style-type: none;
     margin-top: 20%;
 }
 
-.simTitle {
-    margin-top: 2%;
-    display: flex;
-}
-
-.simTitle .simTitleLeft {
-    margin-left: 20%;
-    margin-right: auto;
-}
-
-.simTitle .simTitleRight {
-    margin-right: 20%;
-    margin-left: auto;
-}
-
 .simWrapper {
     display: flex;
-    overflow: auto;
+    flex-direction: column;
+}
+
+.simWrapper .simulate-title,
+.simWrapper .simulate-content {
+    display: flex;
+}
+
+.simWrapper .simulate-title .title {
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 12px;
+    font-size: 16px;
+    font-weight: 500;
+    border: 1px solid #DDDDDD;
 }
 
 #simulateOutput table {
