--- a/dolphinscheduler-ui/public/styles.css
+++ b/dolphinscheduler-ui/public/styles.css
@@ -555,6 +555,7 @@ body {
     box-sizing: border-box;
     text-indent: initial;
     border-color: grey;
+    margin-top: 20px;
 }
 
 #simulateOutput table thead {
