--- a/dolphinscheduler-ui/public/styles.css
+++ b/dolphinscheduler-ui/public/styles.css
@@ -146,6 +146,22 @@ body {
     flex-direction: column;
 }
 
+#no-data, #no-data2 {
+    margin: auto;
+    padding: 5rem;
+}
+#no-data-group-top, #no-data-group-bottom {
+    margin: auto;
+    border: none !important;
+    padding: 5rem !important;
+}
+
+.no-data {
+    margin: 0.5rem !important;
+    padding: 5rem 0rem !important;
+    border: none !important;
+}
+
 .gate-area-body-section-label {
     font-size: 16px;
     font-weight: 400;
@@ -407,19 +423,29 @@ body {
 .tooltip-wrap .tooltip-content {
     display: none;
     position: absolute;
-    bottom: 5%;
-    left: 100%;
+    /* bottom: 5%;
+    left: 100%; */
     background-color: #8e928d;
     padding: .5em;
     z-index: 3;
     line-height: 0.55;
-    border-radius: 10px
+    border-radius: 10px;
+    font-size: small;
 }
 
 .tooltip-wrap:hover .tooltip-content {
     display: block;
-    font-size: small;
 }
+
+.tooltipLeft{
+    bottom: 5%;
+    right: 90% !important;
+  }
+  
+  .tooltipRight{
+    bottom: 5%;
+    left: 90% !important;
+  }
 
 .circuit-area-chart .barTooltip {
     background: #b0c4de;
@@ -470,6 +496,7 @@ body {
 
 #drawCanvasSim {
     /*max-width: 100%;*/
+    margin-left: 10%;
 }
 
 #canvasSimWrapper,
