--- a/dolphinscheduler-ui/public/styles.css
+++ b/dolphinscheduler-ui/public/styles.css
@@ -117,8 +117,6 @@ body {
 
 .gate-area-header-btn {
     cursor: pointer;
-    border: 1px solid #000000;
-    background-color: #d1d0d7;
     margin-left: 8px;
     display: flex;
     justify-content: center;
@@ -335,24 +333,21 @@ small.smaller {
     cursor: pointer;
     position: absolute;
     top: 0px;
-    right: 8px;
+    right: 16px;
     width: 2rem;
     height: 2rem;
     transform: rotate(270deg);
-    background-color: #FFFFFF;
-    border: .5px solid;
+    background-color: #f5f6f8;
+    border: none;
     margin-top: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 5px;
 }
 
 #circuit-area-chart-close-btn svg {
     fill: #000000;
-}
-
-#circuit-area-chart-close-btn:hover {
-    background-color: #000000;
 }
 
 #circuit-area-chart-close-btn:hover svg {
@@ -361,32 +356,34 @@ small.smaller {
 
 #stateBarChartFilterZero {
     cursor: pointer;
+    border-radius: 5px;
     position: absolute;
     top: 0px;
-    right: 52px;
+    right: 60px;
     height: 2rem;
     width: 7rem;
-    background-color: #FFFFFF;
+    background-color: #f5f6f8;
     color: #000000;
-    border: .5px solid;
+    border: none;
     margin-top: 8px;
 }
 
 #sortBar {
+    border-radius: 5px;
     cursor: pointer;
     position: absolute;
     top: 0px;
-    right: 176px;
+    right: 184px;
     height: 2rem;
     width: 3rem;
-    background-color: #FFFFFF;
+    background-color: #f5f6f8;
     color: #000000;
-    border: .5px solid;
+    border: none;
     margin-top: 8px;
 }
 
-#stateBarChartFilterZero:hover, #sortBar:hover {
-    background-color: #000000;
+#stateBarChartFilterZero:hover, #sortBar:hover, #circuit-area-chart-close-btn:hover {
+    background-color: #56698e;
     color: #FFFFFF;
 }
 
@@ -414,21 +411,20 @@ small.smaller {
     height: 2rem;
     transform: rotate(180deg);
     background-color: #f5f6f8;
-    border: .5px solid;
+    border: none;
     margin-top: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: none;
     border-radius: 5px;
-}
-
-#code-area-close-btn svg {
-    fill: #000000;
 }
 
 #code-area-close-btn:hover {
     background-color: #56698e;
+}
+
+#code-area-close-btn svg {
+    fill: #000000;
 }
 
 #code-area-close-btn:hover svg {
