--- a/dolphinscheduler-ui/public/styles.css
+++ b/dolphinscheduler-ui/public/styles.css
@@ -27,6 +27,7 @@ body {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+    border-radius: 3px;
 }
 
 /* App Header */
@@ -191,9 +192,6 @@ small.smaller {
 
 .Probes, .Displays {
     background-color: #f1ac2e;
-    border-radius: 25%;
-    border: none !important;
-    font-family: "Arial Narrow", Arial;
 }
 
 .Half, .Quarter, .Eighth, .Spinning, .Formulaic, .Parametrized, .Sampling, .Parity {
@@ -272,6 +270,7 @@ small.smaller {
     align-items: center;
     border: 1px solid #EDECF3;
     border-width: 2px 0 2px 0px;
+    justify-content: space-between;
 }
 
 .circuit-area-header-btn {
@@ -286,6 +285,64 @@ small.smaller {
 
 .circuit-area-header-btn:hover {
     background-color: #E1E1E1;
+}
+
+.circuit-area-header-left {
+    display: flex;
+}
+
+.circuit-area-header-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-right: 1rem;
+    border-left: 2px solid #EDECF3;
+}
+
+.circuit-area-header-right > div {
+    margin-right: 1rem;
+}
+
+.circuit-area-header-right-lv1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0.5rem;
+}
+
+.circuit-area-header-right-lv2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+}
+
+.circuit-area-header-right-lv2 > div > select {
+    height: 2rem;
+    border-radius: 5px;
+    margin-left: 0.5rem;
+    background-color: #f5f6f8;
+    border-color: #d1d0d7;
+    min-width: 10rem;
+}
+
+button.circuit-area-header-right-lv2 {
+    padding: 0 0.5rem;
+    border-radius: 5px;
+    border: none;
+    background-color: #000000;
+    color: #ffffff;
+}
+
+button.circuit-area-header-right-lv2:hover {
+   cursor: pointer;
+}
+
+.run-icon {
+    display: flex;
+    align-self: center;
+    margin-right: 0.3rem;
 }
 
 .circuit-area-body {
@@ -376,6 +433,20 @@ small.smaller {
     right: 184px;
     height: 2rem;
     width: 3rem;
+    background-color: #f5f6f8;
+    color: #000000;
+    border: none;
+    margin-top: 8px;
+}
+#changeState {
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    text-align: center;
+    top: 0px;
+    right: 240px;
+    height: 2rem;
+    width: 6.5rem;
     background-color: #f5f6f8;
     color: #000000;
     border: none;
@@ -785,4 +856,13 @@ input::-webkit-inner-spin-button {
 
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.grid line {
+    stroke: lightgrey;
+    stroke-opacity: .7;
+    shape-rendering: crispEdges;
+}
+.grid path {
+    stroke-width: 0;
 }
