update gates css

--- a/dolphinscheduler-ui/public/styles.css
+++ b/dolphinscheduler-ui/public/styles.css
@@ -190,15 +190,19 @@ small.smaller {
     color: #ffffff;
 }
 
-.Probes, .Displays {
+.Probes, .Displays, .Custom {
     background-color: #f1ac2e;
 }
 
-.Half, .Quarter, .Eighth, .Spinning, .Formulaic, .Parametrized, .Sampling, .Parity {
+.Half, .Quarter, .Eighth, .Parametrized, .Parity {
     background-color: #24b1a0;
 }
 
-.Order, .Frequency, .Inputs, .Arithmetic, .Compare, .Modular, .Scalar, .Custom {
+.Spinning, .Formulaic, .Sampling {
+    background-color: #626c7a;
+}
+
+.Order, .Frequency, .Inputs, .Arithmetic, .Compare, .Modular, .Scalar {
     background-color: #585df4;
 }
 
