--- a/dolphinscheduler-ui/public/styles.css
+++ b/dolphinscheduler-ui/public/styles.css
@@ -6,7 +6,8 @@
 
 body {
     background-color: white;
-    font-family: IBM Plex Sans, Helvetica Neue, Arial, sans-serif;
+    /* font-family: IBM Plex Sans, Helvetica Neue, Arial, sans-serif; */
+    font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: .875rem;
     font-weight: 400;
     letter-spacing: .01rem;
@@ -14,6 +15,14 @@ body {
     text-align: left;
     color: rgb(51, 54, 57);
     white-space: nowrap;
+}
+
+input,
+select,
+textarea,
+option,
+button {
+    font-family: v-sans, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 /* Main App */
@@ -24,9 +33,12 @@ body {
     height: 100vh;
     overflow: hidden;
     position: relative;
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
     border-radius: 3px;
 }
 
@@ -81,8 +93,10 @@ body {
     display: flex;
 }
 
-.gate-area, .circuit-area, .code-area {
-    height : 100vh;
+.gate-area,
+.circuit-area,
+.code-area {
+    height: 100vh;
 }
 
 .content .gate-area {
@@ -92,6 +106,7 @@ body {
     border: 2px solid #EDECF3;
     position: relative;
 }
+
 .gate-area::after {
     content: '';
     position: absolute;
@@ -100,6 +115,7 @@ body {
     height: 100vh;
     cursor: ew-resize;
 }
+
 .gate-area-header {
     height: 50px;
     display: flex;
@@ -167,11 +183,15 @@ body {
     flex-direction: column;
 }
 
-#no-data, #no-data2, #no-data3 {
+#no-data,
+#no-data2,
+#no-data3 {
     margin: auto;
     padding: 5rem;
 }
-#no-data-group-top, #no-data-group-bottom {
+
+#no-data-group-top,
+#no-data-group-bottom {
     margin: auto;
     border: none !important;
     padding: 5rem !important;
@@ -187,28 +207,55 @@ small.smaller {
     font-size: xx-small;
 }
 
-.Probes, .Displays, .Half, .Quarter, .Eighth, .Spinning, .Formulaic, .Parametrized, .Sampling, .Parity, .Order, .Frequency, .Inputs, .Arithmetic, .Compare, .Modular, .Scalar, .Custom  {
+.Probes,
+.Displays,
+.Half,
+.Quarter,
+.Eighth,
+.Spinning,
+.Formulaic,
+.Parametrized,
+.Sampling,
+.Parity,
+.Order,
+.Frequency,
+.Inputs,
+.Arithmetic,
+.Compare,
+.Modular,
+.Scalar,
+.Custom {
     border-radius: 10px;
     border: none !important;
-    font-family: "Arial Narrow", Arial;
     color: #ffffff;
 }
 
-.Custom, .Formulaic {
+.Custom {
     background-color: #F3A339;
 }
 
-.Half, .Quarter, .Eighth {
+.Half,
+.Quarter,
+.Eighth,
+.Formulaic {
     background-color: #00A895;
 }
 
-.Spinning, .Parametrized, .Sampling, .Probes, .Displays, .Frequency, .Inputs, .Arithmetic, .Compare, .Modular, .Scalar, .Order, .Parity {
+.Spinning,
+.Parametrized,
+.Sampling,
+.Probes,
+.Displays,
+.Frequency,
+.Inputs,
+.Arithmetic,
+.Compare,
+.Modular,
+.Scalar,
+.Order,
+.Parity {
     background-color: #626c7a;
 }
-
-/* .Order, .Frequency, .Inputs, .Arithmetic, .Compare, .Modular, .Scalar {
-    background-color: #585df4;
-} */
 
 .gate-area-body-section-label {
     font-size: 0.9rem;
@@ -308,7 +355,7 @@ small.smaller {
     border-left: 2px solid #EDECF3;
 }
 
-.circuit-area-header-right > div {
+.circuit-area-header-right>div {
     margin-right: 1rem;
 }
 
@@ -326,7 +373,7 @@ small.smaller {
     height: 2rem;
 }
 
-.circuit-area-header-right-lv2 > div > select {
+.circuit-area-header-right-lv2>div>select {
     height: 2rem;
     border-radius: 5px;
     margin-left: 0.5rem;
@@ -344,7 +391,7 @@ button.circuit-area-header-right-lv2 {
 }
 
 button.circuit-area-header-right-lv2:hover {
-   cursor: pointer;
+    cursor: pointer;
 }
 
 .run-icon {
@@ -355,7 +402,6 @@ button.circuit-area-header-right-lv2:hover {
 
 .circuit-area-body {
     flex: 1;
-    /* border: 1px solid #373737; */
     overflow-x: scroll;
     overflow-y: scroll;
     margin: 2px;
@@ -446,6 +492,7 @@ button.circuit-area-header-right-lv2:hover {
     border: none;
     margin-top: 8px;
 }
+
 #changeState {
     border-radius: 5px;
     cursor: pointer;
@@ -461,7 +508,9 @@ button.circuit-area-header-right-lv2:hover {
     margin-top: 8px;
 }
 
-#stateBarChartFilterZero:hover, #sortBar:hover, #circuit-area-chart-close-btn:hover {
+#stateBarChartFilterZero:hover,
+#sortBar:hover,
+#circuit-area-chart-close-btn:hover {
     background-color: #56698e;
     color: #FFFFFF;
 }
@@ -563,8 +612,9 @@ button.circuit-area-header-right-lv2:hover {
 #stateBarChart {
     overflow: auto;
 }
+
 #barChartDes {
-    position: absolute;    
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -575,6 +625,7 @@ button.circuit-area-header-right-lv2:hover {
     height: 50%;
     padding: 10px;
 }
+
 #stateTableDes {
     padding: 10px;
     text-align: center;
@@ -582,7 +633,7 @@ button.circuit-area-header-right-lv2:hover {
     font-size: 16px;
     color: grey;
 }
-/* pop up gate name */
+
 .tooltip-wrap {
     position: relative;
 }
@@ -606,15 +657,15 @@ button.circuit-area-header-right-lv2:hover {
     display: block;
 }
 
-.tooltipLeft{
+.tooltipLeft {
     bottom: 5%;
     right: 90%;
-  }
-  
-  .tooltipRight{
+}
+
+.tooltipRight {
     bottom: 5%;
     left: 90%;
-  }
+}
 
 .circuit-area-chart .barTooltip {
     background: #b0c4de;
@@ -663,18 +714,9 @@ button.circuit-area-header-right-lv2:hover {
     width: 100%;
 }
 
-#drawCanvasSim {
-    /*max-width: 100%;*/
-}
-
 #canvasSimWrapper,
 #simulateOutput {
     width: 50%;
-    /*overflow: auto;*/
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
-    /*justify-content: flex-start;*/
     border: 1px solid #DDDDDD;
     max-height: 100vh;
 }
@@ -734,8 +776,6 @@ button.circuit-area-header-right-lv2:hover {
 #simulateOutput .table-action {
     width: 100%;
     padding: 12px 16px;
-    /*display: flex;*/
-    /*justify-content: right;*/
 }
 
 #simulateOutput .table-action button {
@@ -755,7 +795,6 @@ button.circuit-area-header-right-lv2:hover {
     position: relative;
     z-index: auto;
     border: none;
-    /*display: inline-flex;*/
     flex-wrap: nowrap;
     flex-shrink: 0;
     align-items: center;
@@ -767,6 +806,7 @@ button.circuit-area-header-right-lv2:hover {
     transition: color .3s cubic-bezier(0.4, 0, 0.2, 1), background-color .3s cubic-bezier(0.4, 0, 0.2, 1), opacity .3s cubic-bezier(0.4, 0, 0.2, 1), border-color .3s cubic-bezier(0.4, 0, 0.2, 1);
     float: right;
 }
+
 #vectSearchCancel {
     font-weight: 400;
     line-height: 1;
@@ -794,9 +834,11 @@ button.circuit-area-header-right-lv2:hover {
     float: right;
     margin: 0 0 0 -5rem;
 }
+
 #vectorTable svg {
     cursor: pointer;
 }
+
 #simulateOutput .table-action button:hover {
     color: #FFFFFF;
     background-color: #40a9ff;
@@ -855,7 +897,6 @@ button.circuit-area-header-right-lv2:hover {
 #simulateOutput table tbody tr td {
     padding: 12px;
     position: relative;
-    /*text-align: start;*/
     text-align: center;
     box-sizing: border-box;
     background-color: #FAFAFC;
@@ -874,13 +915,13 @@ button.circuit-area-header-right-lv2:hover {
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 
 input[type=number] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
 .grid line {
@@ -888,6 +929,7 @@ input[type=number] {
     stroke-opacity: .7;
     shape-rendering: crispEdges;
 }
+
 .grid path {
     stroke-width: 0;
 }
@@ -970,13 +1012,11 @@ input[type=number] {
     display: block;
 }
 
-/* qiskit code css */
 .code-line {
     display: flex;
 }
 
-/* line number of qiskit code  */
-.line-number { 
+.line-number {
     min-width: 1.5rem;
     max-width: 1.2rem;
     text-align: right;
@@ -985,7 +1025,6 @@ input[type=number] {
 }
 
 #text-code {
-    font-family: IBM Plex Sans, Helvetica Neue, Arial, sans-serif;
     color: rgb(51, 54, 57);
     outline: none;
     width: 100%;
@@ -1002,7 +1041,8 @@ input[type=number] {
     display: none !important;
 }
 
-#runButton:disabled,#runButton[disabled] {
+#runButton:disabled,
+#runButton[disabled] {
     background-color: #cccccc;
     color: #666666;
     cursor: default;
@@ -1034,6 +1074,7 @@ input[type=number] {
     visibility: hidden;
     animation: spin 1s infinite linear;
 }
+
 #loading.display {
     visibility: visible;
 }
@@ -1042,6 +1083,7 @@ input[type=number] {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
