Update main.js file

--- a/dolphinscheduler-ui/public/styles.css
+++ b/dolphinscheduler-ui/public/styles.css
@@ -117,7 +117,7 @@ body {
 }
 
 .gate-area-header {
-    height: 50px;
+    min-height: 50px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -204,7 +204,7 @@ body {
 }
 
 small.smaller {
-    font-size: xx-small;
+    font-size: 8px;
 }
 
 .Probes,
@@ -230,14 +230,10 @@ small.smaller {
     color: #ffffff;
 }
 
-.Custom,
-.Formulaic {
-    background-color: #F3A339;
-}
-
 .Half,
 .Quarter,
-.Eighth {
+.Eighth,
+.Formulaic {
     background-color: #00A895;
 }
 
@@ -253,7 +249,8 @@ small.smaller {
 .Modular,
 .Scalar,
 .Order,
-.Parity {
+.Parity,
+.Custom {
     background-color: #626c7a;
 }
 
